--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -36,6 +36,8 @@
         "hls-parser": "^0.10.8",
         "iconv-lite": "^0.6.3",
         "node-json-db": "^2.3.0",
-        "node-rsa": "^1.1.1"
+        "node-rsa": "^1.1.1",
+        "opencc-js": "^1.0.5"
     }
+
 }
